fix: overflowing table

--- a/src/app/students/students.component.css
+++ b/src/app/students/students.component.css
@@ -85,6 +85,8 @@
 .lessons-card {
   grid-area: lessons;
   padding: 2rem;
+  height: 100%;
+  overflow: hidden;
 }
 
 .lessons-card__content {
